[gd_scene load_steps=11 format=3 uid="uid://dx14t8m56euln"]

[ext_resource type="Script" uid="uid://bs60hv4ygfptb" path="res://scripts/game.gd" id="1_iywne"]
[ext_resource type="PackedScene" uid="uid://d17rqwirmadct" path="res://scenes/Card.tscn" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://b7exrypskv51k" path="res://scripts/label.gd" id="2_gee14"]
[ext_resource type="Texture2D" uid="uid://cfv6jefqj5j02" path="res://images/icon.svg" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c78sloquut3db" path="res://scenes/Screw.tscn" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://d2rb4i2oowo0k" path="res://scripts/cursor.gd" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bqxijo0mm65up" path="res://scenes/stack.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://c7jcjkn0hmper" path="res://scenes/discard.tscn" id="7_u5sy4"]

[sub_resource type="LabelSettings" id="LabelSettings_gee14"]
font_size = 9

[sub_resource type="CircleShape2D" id="CircleShape2D_lbhrr"]
radius = 1.0

[node name="Game" type="Node2D"]
script = ExtResource("1_iywne")

[node name="Stack" parent="." instance=ExtResource("6_p57ef")]
position = Vector2(128, 133)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_gee14")
script = ExtResource("2_gee14")

[node name="Cursor" type="Area2D" parent="."]
script = ExtResource("3_lnu2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
shape = SubResource("CircleShape2D_lbhrr")

[node name="Sprite2D" type="Sprite2D" parent="Cursor"]
position = Vector2(-5.72205e-06, -8.67362e-19)
scale = Vector2(0.09, 0.09)
texture = ExtResource("2_lbhrr")

[node name="Card_Position1" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(512, 128)

[node name="Card_Position2" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(640, 128)

[node name="Card_Position3" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(768, 128)

[node name="Card_Position4" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(896, 128)

[node name="Card_Position5" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(1024, 128)

[node name="Card_Position6" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(512, 320)

[node name="Card_Position7" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(640, 320)

[node name="Card_Position8" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(768, 320)

[node name="Card_Position9" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(896, 320)

[node name="Card_Position10" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(1024, 320)

[node name="Card1" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(512, 128)
initial_state = "Idle_Card"

[node name="Card2" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(640, 128)
initial_state = "Idle_Card"

[node name="Card3" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(768, 128)
initial_state = "Idle_Card"

[node name="Card4" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(896, 128)
initial_state = "Idle_Card"

[node name="Card5" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(1024, 128)
initial_state = "Idle_Card"

[node name="Card6" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(512, 320)
initial_state = "Idle_Card"

[node name="Card7" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(640, 318)
initial_state = "Idle_Card"

[node name="Card8" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(768, 320)
initial_state = "Idle_Card"

[node name="Card9" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(896, 320)
initial_state = "Idle_Card"

[node name="Card10" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(1024, 320)
initial_state = "Idle_Card"

[node name="Discard" parent="." instance=ExtResource("7_u5sy4")]
position = Vector2(128, 320)
